<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PortFolioApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="menu1">POPULAR MOVIES</string>
    <string name="menu2">STOCK HAWK</string>
    <string name="menu3">BUILD IT BIGGER</string>
    <string name="menu4">MAKE YOUR APP MATERIAL</string>
    <string name="menu5">GO UBIQUITOUS</string>
    <string name="menu6">CAPSTONE</string>

</resources>
