<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/my_nanodegree_apps" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:id="@+id/header"
        android:textStyle="bold"
        android:height="@dimen/abc_text_size_large_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu1"
        android:id="@+id/button"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:background="@color/btn_color"
        android:width="@dimen/btn_width"
        android:textColor="@color/background_floating_material_light"
        android:height="@dimen/btn_height"
        android:textSize="@dimen/btn_font_size"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:onClick="btn1Action" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu2"
        android:id="@+id/button2"
        android:background="@color/btn_color"
        android:width="@dimen/btn_width"
        android:textColor="@color/background_floating_material_light"
        android:height="@dimen/btn_height"
        android:textSize="@dimen/btn_font_size"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu3"
        android:id="@+id/button3"
        android:background="@color/btn_color"
        android:width="@dimen/btn_width"
        android:textColor="@color/background_floating_material_light"
        android:height="@dimen/btn_height"
        android:textSize="@dimen/btn_font_size"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu4"
        android:id="@+id/button4"
        android:background="@color/btn_color"
        android:width="@dimen/btn_width"
        android:textColor="@color/background_floating_material_light"
        android:height="@dimen/btn_height"
        android:textSize="@dimen/btn_font_size"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu5"
        android:id="@+id/button5"
        android:background="@color/btn_color"
        android:width="@dimen/btn_width"
        android:textColor="@color/background_floating_material_light"
        android:height="@dimen/btn_height"
        android:textSize="@dimen/btn_font_size"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu6"
        android:id="@+id/button6"
        android:background="@color/btn_color"
        android:width="@dimen/btn_width"
        android:textColor="@color/background_floating_material_light"
        android:height="@dimen/btn_height"
        android:textSize="@dimen/btn_font_size"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
